[SELC-5185] feat: Added api to retrieve products for new admin functionality